@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+.form-container.sign-up  h1 , .toggle-panel.toggle-left h1{
+    font-size: 1.5rem;
+}
 body{
     background-color: #c9d6ff;
     background: linear-gradient(to right, #e2e2e2, #c9d6ff);
@@ -169,4 +172,16 @@ body{
 }
 .container.active .toggle-right{
     transform: translateX(200%);
+}
+
+.container textarea {
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+    resize: none; /* Disable textarea resizing */
 }
