@@ -14,9 +14,8 @@ use App\Http\Controllers\AuthController;
 |
 */
 #Hadi dial l home 
-Route::get('/home', function () { return view('home');});
+Route::get('/', function () { return view('home');});
 
 #Hado dial login
 Route::get('/login', [AuthController::class, 'showLoginForm'])->name('login');
 Route::post('/login', [AuthController::class, 'login']);
-Route::get('/support', function () { return view('support');});
